# GaiaRusted

./: .gitignore  ARCHITECTURE.md  CODEBASE_EXPLANATION.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CURRENT_SESSION_STATUS.md  Cargo.toml  LICENSE  README.md  stress_test_comprehensive.rs
docs/: PHASE_1_LEXER.md
examples/: advanced_enums.rs  arithmetic.rs  basic_showcase.rs  cargo_integration_test.rs  enum_variants.rs  expression_eval.rs  option_patterns.rs  request_response.rs  showcase.rs  simple.rs  simple_enum.rs  simple_showcase.rs  struct_enum_variants.rs
src/: borrow_error_display.rs  builtins.rs  cargo_api.rs  colors.rs  compiler.rs  compiler_incremental.rs  compiler_integration.rs  config.rs  error_codes.rs  error_suggestions.rs  formatter.rs  lib.rs  main.rs  module_loader.rs  source_display.rs
src/analysis/: advanced_assoc_types.rs  advanced_patterns.rs  advanced_traits.rs  associated_types.rs  const_generics.rs  enhanced_patterns.rs  error_propagation.rs  generic_constraints.rs  lifetime_inference.rs  lifetime_lexing.rs  lifetime_parsing.rs  lifetime_resolution.rs  mod.rs  object_safety.rs  pattern_exhaustiveness.rs  pattern_matching.rs  sealed_traits.rs  trait_bounds_inference.rs  trait_system.rs  traits.rs  type_aliases.rs  type_specialization.rs
src/async_await/: advanced_async.rs  mod.rs
src/borrowchecker/: associated_type_resolver.rs  associated_types_tests.rs  edge_cases_tests.rs  error_reporting_enhanced.rs  function_lifetimes.rs  generic_substitutor.rs  impl_lifetimes.rs  integration_testing.rs  integration_utilities.rs  interior_mutability.rs  iterator_analysis.rs  lifetime_solver.rs  lifetime_validation.rs  lifetimes.rs  mod.rs  nll.rs  (+14 more)
tests/: advanced_features_test.rs  analysis_pattern_matching_test.rs  borrow_checking_test.rs  codegen_tests.rs  compiler_test_advanced.rs  compiler_test_basic.rs  compiler_test_complete.rs  config_test.rs  const_static_test.rs  const_toplevel.rs  constraint_solving_test.rs  dyn_trait_test.rs  edge_cases_optimization_test.rs  end_to_end_integration_test.rs  ffi_test.rs  function_struct_lifetimes_test.rs  hashmap_basic.rs  hashmap_test.rs  impl_blocks_comprehensive.rs  impl_blocks_simple.rs  impl_blocks_simple_working.rs  impl_blocks_toplevel.rs  impl_trait_test.rs  integration_tests.rs  integration_v0_11_0_optimizations.rs  integration_v0_12_0_memory_profiling.rs  iterator_advanced.rs  iterator_protocol.rs  lexer_parser_builtins_test.rs  library_api_test.rs  mir_tests.rs  optimization_test.rs  polish_test.rs  showcase_all_features_test.rs  simple_test.rs  stdlib_option_result_test.rs  trait_bounds_simple.rs  trait_bounds_test.rs  trait_bounds_user.rs  trait_bounds_valid.rs  (+7 more)
(+164 files in other folders)
